# semgrep-ocaml

./: README.md
config/: discover.ml
fyi/: tree-sitter-version  versions
fyi/semgrep-grammars/src/semgrep-ocaml/: grammar.js
lib/: Boilerplate.ml  CST.ml  Parse.ml  Parse.mli  dune
